fix: update diff to patched version
